--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,7 +1,7 @@
 footer.footer {
   font-size: 0.85rem;
-  background-color: #2c2c2c;
-  color: #8e8e8e;
+  background-color: #f33;
+  color: white;
   padding: 0.5rem 1rem;
 }
 
@@ -10,5 +10,5 @@ footer.footer {
 }
 
 .footer a {
-  color: #5d5d5d;
+  color: rgba(255, 255, 255, 0.5);
 }
