--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -1,7 +1,12 @@
 <header class="header">
   <nav class="navbar">
     <div class="navbar-brand">
-      <a class="navbar-item" href="{{or site.url (or siteRootUrl siteRootPath)}}">{{site.title}}</a>
+      <a class="navbar-item navbar-item__brand-wrapper" href="{{or site.url (or siteRootUrl siteRootPath)}}">
+        <img class="navbar-item__logo" src="{{uiRootPath}}/img/decidim-logo-topbar.svg" alt="Decidim">
+        <span class="navbar-item__name">
+          {{site.title}}
+        </span>
+      </a>
       <button class="navbar-burger" data-target="topbar-nav">
         <span></span>
         <span></span>
