--- a/src/css/site.css
+++ b/src/css/site.css
@@ -1,6 +1,7 @@
 @import "typeface-roboto.css";
 @import "typeface-roboto-mono.css";
 @import "base.css";
+@import 'debug.css';
 @import "main.css";
 @import "navigation.css";
 @import "navigation-menu.css";
