Fix link to docs.decidim.org in logo

--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -17,7 +17,7 @@
 <header class="header">
   <nav class="navbar">
     <div class="navbar-brand">
-      <a class="navbar-item navbar-item__brand-wrapper" href="{{or site.url (or siteRootUrl siteRootPath)}}">
+      <a class="navbar-item navbar-item__brand-wrapper" href="{{site.url}}">
         <img class="navbar-item__logo" src="{{uiRootPath}}/img/decidim-logo-topbar.svg" alt="Decidim">
         <span class="navbar-item__name">
           {{site.title}}
