--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -1,3 +1,37 @@
+.doc .software-docs-list > .content,
+.doc .project-docs-list > .content {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 2rem;
+  /* margin-top: 6rem; */
+  margin-bottom: 2rem;
+}
+
+.doc .software-docs-list > .content > .sidebarblock,
+.doc .project-docs-list > .content > .sidebarblock {
+  display: flex;
+  flex-direction: row;
+  border-top: 5px solid #f33;
+  background-color: #fafafa;
+  margin: 15pt;
+}
+
+.doc .project-docs-list > .content > .sidebarblock {
+  flex-basis: 30%;
+}
+
+.doc .software-docs-list > .content > .sidebarblock {
+  flex-basis: 45%;
+}
+
+.doc .software-docs-list > .content > .sidebarblock > .content .paragraph:first-child,
+.doc .project-docs-list > .content > .sidebarblock > .content .paragraph:first-child {
+  font-size: 1.5rem;
+  font-weight: 600;
+  text-align: center;
+  word-wrap: normal !important;
+}
+
 .doc {
   margin: 0 auto;
   max-width: 40rem;
