--- a/src/css/breadcrumbs.css
+++ b/src/css/breadcrumbs.css
@@ -1,7 +1,7 @@
 .crumbs {
   display: none;
   flex: 1 1;
-  padding: 0 0.5rem 0 0.75rem;
+  /* padding: 0 0.5rem 0 0.75rem; */
   line-height: 1.35;
   hyphens: none;
 }
