--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -33,10 +33,34 @@
 }
 
 .doc {
-  margin: 0 auto;
-  max-width: 40rem;
-  padding: 0 1rem 4rem;
-  color: #333;
+    margin: 0 .25rem;
+    max-width: 33rem;
+    padding: 0 .75rem 3rem;
+    background-color: #fff;
+    box-shadow: 0 0 5px rgba(0,0,0,.1);
+    font-size: .85rem;
+    word-break: break-word;
+    overflow: hidden;
+}
+
+@media (min-width: 600px){
+  .doc {
+      max-width: 34rem;
+      margin: 0 auto;
+  }
+}
+
+@media (min-width: 800px){
+  .doc {
+      max-width: 37rem;
+  }
+}
+
+@media screen and (min-width: 1000px){
+  .doc {
+      margin: 0 2rem 2rem;
+      max-width: 54rem;
+  }
 }
 
 @media screen and (min-width: 1024px) {
@@ -52,14 +76,15 @@
 .doc h4,
 .doc h5,
 .doc h6 {
-  color: #191919;
-  font-weight: normal;
+  color: var(--color-primary);
+  text-transform: lowercase;
+  font-weight: 600;
   line-height: 1.3;
   margin: 1rem 0 0;
 }
 
 .doc h3 {
-  font-weight: 500;
+  font-weight: 600;
 }
 
 .doc h1 > a.anchor,
@@ -85,6 +110,10 @@
 .doc h5 > a.anchor::before,
 .doc h6 > a.anchor::before {
   content: "\00a7";
+  color: var(--color-primary);
+  font-size: 70%;
+  vertical-align: middle;
+  padding-left: 7px;
 }
 
 .doc h1:hover > a.anchor,
@@ -304,7 +333,7 @@
 }
 
 .doc h2:not(.discrete) {
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid #FFEBEC;
   margin-left: -1rem;
   margin-right: -1rem;
   padding: 0.4rem 1rem 0.1rem;
@@ -427,12 +456,12 @@
 }
 
 .doc .sidebarblock {
-  background-color: #ebebeb;
+  background-color: #FFEBEC;
   padding: 0.75rem 1.5rem;
 }
 
 .doc .sidebarblock > .content > .title {
-  color: #191919;
+  color: var(--color-primary);
   font-size: 1.2rem;
   font-weight: 500;
   line-height: 1.3;
