--- a/src/css/toolbar.css
+++ b/src/css/toolbar.css
@@ -3,22 +3,45 @@
 }
 
 .toolbar {
-  color: #5d5d5d;
-  align-items: center;
-  background-color: #fafafa;
-  box-shadow: 0 1px 0 #e1e1e1;
+  align-items: flex-end;
   display: flex;
   font-size: 0.75rem;
   height: var(--toolbar-height);
   justify-content: flex-start;
-  position: sticky;
+  /* position: sticky;
   top: var(--navbar-height);
-  z-index: 1;
+  z-index: 1; */
+  padding: 1rem .5rem .25rem;
+  max-width: 34rem;
 }
 
-.toolbar a,
-.toolbar a:visited {
-  color: inherit;
+@media (max-width: 1023px){
+  .toolbar {
+      margin-left: auto;
+      margin-right: auto;
+      padding-top: 1.5rem;
+  }
+}
+
+@media (min-width: 800px){
+  .toolbar {
+      max-width: 37rem;
+  }
+}
+
+@media (min-width: 1000px){
+  .toolbar {
+      max-width: 58rem;
+      margin: 0 2rem;
+  }
+}
+
+@media (min-width: 1024px){
+  .toolbar {
+      max-width: 58rem;
+      padding: 1rem 2rem .25rem;
+      margin: 0;
+  }
 }
 
 .navigation-toggle {
