--- a/src/partials/navigation-menu.hbs
+++ b/src/partials/navigation-menu.hbs
@@ -1,8 +1,11 @@
 {{#if page.navigation}}
-  <div class="navigation-menu is-active" data-panel="menu">
-    <nav class="nav-menu">
-      <h3 class="title"><a href="{{relativize page.url page.componentVersion.url}}">{{page.componentVersion.title}}</a></h3>
-      {{> navigation-tree navigation=page.navigation}}
-    </nav>
-  </div>
+<div class="navigation-menu is-active" data-panel="menu">
+  <nav class="nav-menu">
+    <h3 class="title">
+      {{!-- <a href="{{relativize page.url page.componentVersion.url}}">{{page.componentVersion.title}}</a> --}}
+      <a href="">Decidim's Functions and Features</a>
+    </h3>
+    {{> navigation-tree navigation=page.navigation}}
+  </nav>
+</div>
 {{/if}}
