--- a/src/partials/navigation-menu.hbs
+++ b/src/partials/navigation-menu.hbs
@@ -2,8 +2,7 @@
 <div class="navigation-menu is-active" data-panel="menu">
   <nav class="nav-menu">
     <h3 class="title">
-      {{!-- <a href="{{relativize page.url page.componentVersion.url}}">{{page.componentVersion.title}}</a> --}}
-      <a href="">Decidim's Functions and Features</a>
+      <a href="{{relativize page.url page.componentVersion.url}}">{{page.componentVersion.title}}</a>
     </h3>
     {{> navigation-tree navigation=page.navigation}}
   </nav>
