--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,8 +1,8 @@
 :root {
   --color-primary: #f33;
   --color-secondary: #190000;
-  --color-primary-dark: #E52D2E;
-  --color-text: #221F20;
+  --color-primary-dark: #e52d2e;
+  --color-text: #221f20;
   --color-text-inverse: #fff;
   --color-navbar-bg: #f33;
   --color-navbar-bg-focus: #000;
@@ -38,7 +38,7 @@ img {
 }
 
 body {
-  background-color: #f9f9f9; 
+  background-color: #f9f9f9;
   color: var(--color-text);
   line-height: 1.6;
   margin: 0;
