--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -33,33 +33,33 @@
 }
 
 .doc {
-    margin: 0 .25rem;
-    max-width: 33rem;
-    padding: 0 .75rem 3rem;
-    background-color: #fff;
-    box-shadow: 0 0 5px rgba(0,0,0,.1);
-    font-size: .85rem;
-    word-break: break-word;
-    overflow: hidden;
+  margin: 0 0.25rem;
+  max-width: 33rem;
+  padding: 0 0.75rem 3rem;
+  background-color: #fff;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  font-size: 0.85rem;
+  word-break: break-word;
+  overflow: hidden;
 }
 
-@media (min-width: 600px){
+@media (min-width: 600px) {
   .doc {
-      max-width: 34rem;
-      margin: 0 auto;
+    max-width: 34rem;
+    margin: 0 auto;
   }
 }
 
-@media (min-width: 800px){
+@media (min-width: 800px) {
   .doc {
-      max-width: 37rem;
+    max-width: 37rem;
   }
 }
 
-@media screen and (min-width: 1000px){
+@media screen and (min-width: 1000px) {
   .doc {
-      margin: 0 2rem 2rem;
-      max-width: 54rem;
+    margin: 0 2rem 2rem;
+    max-width: 54rem;
   }
 }
 
@@ -333,7 +333,7 @@
 }
 
 .doc h2:not(.discrete) {
-  border-bottom: 1px solid #FFEBEC;
+  border-bottom: 1px solid #ffebec;
   margin-left: -1rem;
   margin-right: -1rem;
   padding: 0.4rem 1rem 0.1rem;
@@ -456,7 +456,7 @@
 }
 
 .doc .sidebarblock {
-  background-color: #FFEBEC;
+  background-color: #ffebec;
   padding: 0.75rem 1.5rem;
 }
 
