--- a/src/css/header.css
+++ b/src/css/header.css
@@ -161,7 +161,7 @@ body {
   justify-content: center;
   padding-left: 0.75rem;
   padding-right: 0.25rem;
-  border-right: 1px solid rgba(255,255,255,0.3);
+  border-right: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 .navbar-item__logo {
@@ -211,38 +211,38 @@ body {
 } */
 
 /* @media screen and (max-width: 1023px) { */
-  /* .navbar-brand .navbar-item {
-    align-items: center;
-    display: flex;
-  } */
+/* .navbar-brand .navbar-item {
+  align-items: center;
+  display: flex;
+} */
 
-  .navbar-menu {
-    background-color: var(--color-secondary);
-    padding: 0.5rem 0;
-  }
+.navbar-menu {
+  background-color: var(--color-secondary);
+  padding: 0.5rem 0;
+}
 
-  .navbar-menu.is-active {
-    display: block;
-    box-shadow: 0 8px 16px rgba(10, 10, 10, 0.1);
-    height: 100vh;
-    width: 18rem;
-    overflow-y: auto;
-    position: absolute;
-    top: 0;
-    right: 0;
-    padding-top: var(--navbar-height);
-    z-index: 3;
-  }
+.navbar-menu.is-active {
+  display: block;
+  box-shadow: 0 8px 16px rgba(10, 10, 10, 0.1);
+  height: 100vh;
+  width: 18rem;
+  overflow-y: auto;
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding-top: var(--navbar-height);
+  z-index: 3;
+}
 
-  .navbar-menu .navbar-item {
-    color: var(--color-text-inverse);
-    padding: .5rem 1rem;
-  }
+.navbar-menu .navbar-item {
+  color: var(--color-text-inverse);
+  padding: 0.5rem 1rem;
+}
 
-  .navbar-menu .navbar-item:hover {
-    background-color: rgba(255,255,255,.05);
-    color: var(--color-primary);
-  }
+.navbar-menu .navbar-item:hover {
+  background-color: rgba(255, 255, 255, 0.05);
+  color: var(--color-primary);
+}
 /* } */
 
 /* @media screen and (min-width: 1024px) {
