--- a/src/partials/toolbar.hbs
+++ b/src/partials/toolbar.hbs
@@ -1,8 +1,8 @@
 <div class="toolbar" role="navigation">
   <button class="navigation-toggle"></button>
-  {{#if site.homeUrl}}
+  {{!-- {{#if site.homeUrl}}
   <a href="/init/{{page.version}}/index.html" class="home-link{{#if page.home}} is-current{{/if}}"></a>
-  {{/if}}
+  {{/if}} --}}
   {{> breadcrumbs}}
   {{!-- {{> page-versions}} --}}
   {{!-- {{#if page.editUrl}}
