--- a/src/css/navigation-menu.css
+++ b/src/css/navigation-menu.css
@@ -36,13 +36,13 @@ html.is-clipped--nav {
   flex-grow: 1;
   min-height: 0;
   width: 100%;
-  padding: 0.5rem 0.75rem;
+  padding: 2rem 0.75rem;
   line-height: 1.35;
   position: relative;
 }
 
 .nav-menu h3.title {
-  margin: 0;
+  margin: 0 0 1.5rem;
   font-weight: 600;
   color: var(--color-primary);
   font-size: 1.25rem;
