--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -1,37 +1,3 @@
-.doc .software-docs-list > .content,
-.doc .project-docs-list > .content {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 2rem;
-  /* margin-top: 6rem; */
-  margin-bottom: 2rem;
-}
-
-.doc .software-docs-list > .content > .sidebarblock,
-.doc .project-docs-list > .content > .sidebarblock {
-  display: flex;
-  flex-direction: row;
-  border-top: 5px solid #f33;
-  background-color: #fafafa;
-  margin: 15pt;
-}
-
-.doc .project-docs-list > .content > .sidebarblock {
-  flex-basis: 30%;
-}
-
-.doc .software-docs-list > .content > .sidebarblock {
-  flex-basis: 45%;
-}
-
-.doc .software-docs-list > .content > .sidebarblock > .content .paragraph:first-child,
-.doc .project-docs-list > .content > .sidebarblock > .content .paragraph:first-child {
-  font-size: 1.5rem;
-  font-weight: 600;
-  text-align: center;
-  word-wrap: normal !important;
-}
-
 .doc {
   margin: 0 0.25rem;
   max-width: 33rem;
@@ -109,7 +75,7 @@
 .doc h4 > a.anchor::before,
 .doc h5 > a.anchor::before,
 .doc h6 > a.anchor::before {
-  content: "\00a7";
+  content: '\00a7';
   color: var(--color-primary);
   font-size: 70%;
   vertical-align: middle;
@@ -405,11 +371,11 @@
 }
 
 .doc ul.checklist i.fa-check-square-o::before {
-  content: "\2713";
+  content: '\2713';
 }
 
 .doc ul.checklist i.fa-square-o::before {
-  content: "\274f";
+  content: '\274f';
 }
 
 .doc .dlist .dlist,
@@ -532,7 +498,7 @@
   border: 1px solid #404040;
   border-radius: 100%;
   display: inline-block;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 0.75rem;
   font-style: normal;
   height: 1.25em;
@@ -565,12 +531,12 @@ b.button {
 }
 
 b.button::before {
-  content: "[";
+  content: '[';
   padding-right: 0.25em;
 }
 
 b.button::after {
-  content: "]";
+  content: ']';
   padding-left: 0.25em;
 }
 
@@ -592,7 +558,7 @@ kbd,
 }
 
 .keyseq {
-  font-family: "Roboto Mono", monospace;
+  font-family: 'Roboto Mono', monospace;
   font-size: 0.9em;
 }
 
@@ -609,6 +575,6 @@ kbd,
 }
 
 .menuseq i.caret::before {
-  content: ">";
+  content: '>';
   font-weight: 500;
 }
