--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -34,10 +34,8 @@
     </div>
     <div id="topbar-nav" class="navbar-menu">
       <div class="navbar-end">
-        <a class="navbar-item" href="#">Home</a>
-        <a class="navbar-item" href="#">Home</a>
-        <a class="navbar-item" href="#">Home</a>
-        <a class="navbar-item" href="#">Home</a>
+        <a class="navbar-item" href="https://decidim.org">decidim.org</a>
+        <a class="navbar-item" href="https://docs.decidim.org">Docs Home</a>
       </div>
     </div>
   </nav>
